fix spacing in grid

--- a/static/sass/_custom.scss
+++ b/static/sass/_custom.scss
@@ -528,7 +528,8 @@ img.lc-about-image{
     }
 
     .grid-item {
-      padding: 0.5rem;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
     }
   }
 
